[package]
name    = "cloudwatch_bot"
version = "0.1.0"
authors = [
  "Pierre Dal-Pra <dalpra.pierre@gmail.com>"
]

[features]
default = []
dev     = ["clippy"]

[dependencies]
lazy_static    = "0.2"
serde          = "1.0"
serde_derive   = "1.0"
serde_json     = "1.0"
clippy         = { version = "*", optional = true }
