[package]
name    = "cloudwatch_bot"
version = "0.1.0"
authors = [
  "Pierre Dal-Pra <dalpra.pierre@gmail.com>"
]

[features]
default = []
dev     = ["clippy"]

[dependencies]
hyper          = "0.11"
lazy_static    = "0.2"
rocket         = "0.2.8"
rocket_codegen = "0.2.8"
serde          = "1.0"
serde_derive   = "1.0"
serde_json     = "1.0"
clippy         = { version = "*", optional = true }

[dev-dependencies]
rocket = { version = "0.2.8", features = ["testing"] }
